# gcp-mcp-server

./: README.md  pyproject.toml  server.json
examples/: README.md  basic_usage.py
